# learn_opencv

./: README.md
doc/: book.md
learn_opencv3.1.0/: 2019-09-07-ReadMe.md  2019-12-16-api.md  2019-12-16-read_report.md  2019-12-16-教程读后感.md  README.md  install.md
learn_opencv3.1.0/PPT/: OpenCV3.1.0-02掩膜操作.pptx
learn_opencv3.1.0/source/: CMakeLists.txt
learn_opencv3.1.0/source/chapter/: CMakeLists.txt  chapter_001.cpp  chapter_002.cpp  chapter_003.cpp  chapter_004.cpp  chapter_005.cpp  chapter_006.cpp  chapter_007.cpp  chapter_008.cpp  chapter_009.cpp  chapter_010.cpp  chapter_011.cpp  chapter_012.cpp  chapter_013.cpp  chapter_014.cpp  chapter_015.cpp  chapter_016.cpp  chapter_017.cpp  chapter_018.cpp  chapter_019.cpp  chapter_020.cpp  chapter_021.cpp  chapter_022.cpp  chapter_023.cpp  chapter_024.cpp  chapter_025.cpp  chapter_026.cpp  chapter_027.cpp  chapter_028.cpp  chapter_029.cpp  chapter_030.cpp  chapter_031.cpp  chapter_032.cpp  chapter_033.cpp  chapter_034.cpp  chapter_035.cpp  data.h
learn_opencv3.1.0/source/opencv_util/: main.cpp
learn_opencv3.1.0/source/other/: cvtColor.cpp  main.cpp  resize.cpp
learn_opencv3.1.0/source/script/: gen_cmake.py
learn_opencv3.1.0/source/tools/: helper.cmake
