add_executable(chapter_029 chapter_029.cpp)
target_include_directories(chapter_029 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_029 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_029 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_001 chapter_001.cpp)
target_include_directories(chapter_001 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_001 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_001 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_015 chapter_015.cpp)
target_include_directories(chapter_015 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_015 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_015 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_014 chapter_014.cpp)
target_include_directories(chapter_014 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_014 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_014 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_028 chapter_028.cpp)
target_include_directories(chapter_028 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_028 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_028 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_016 chapter_016.cpp)
target_include_directories(chapter_016 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_016 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_016 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_002 chapter_002.cpp)
target_include_directories(chapter_002 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_002 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_002 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_003 chapter_003.cpp)
target_include_directories(chapter_003 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_003 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_003 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_017 chapter_017.cpp)
target_include_directories(chapter_017 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_017 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_017 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_013 chapter_013.cpp)
target_include_directories(chapter_013 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_013 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_013 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_007 chapter_007.cpp)
target_include_directories(chapter_007 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_007 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_007 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_006 chapter_006.cpp)
target_include_directories(chapter_006 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_006 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_006 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_012 chapter_012.cpp)
target_include_directories(chapter_012 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_012 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_012 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_004 chapter_004.cpp)
target_include_directories(chapter_004 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_004 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_004 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_010 chapter_010.cpp)
target_include_directories(chapter_010 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_010 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_010 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_011 chapter_011.cpp)
target_include_directories(chapter_011 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_011 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_011 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_005 chapter_005.cpp)
target_include_directories(chapter_005 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_005 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_005 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_008 chapter_008.cpp)
target_include_directories(chapter_008 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_008 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_008 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_020 chapter_020.cpp)
target_include_directories(chapter_020 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_020 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_020 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_034 chapter_034.cpp)
target_include_directories(chapter_034 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_034 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_034 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_035 chapter_035.cpp)
target_include_directories(chapter_035 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_035 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_035 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_021 chapter_021.cpp)
target_include_directories(chapter_021 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_021 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_021 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_009 chapter_009.cpp)
target_include_directories(chapter_009 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_009 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_009 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_023 chapter_023.cpp)
target_include_directories(chapter_023 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_023 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_023 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_022 chapter_022.cpp)
target_include_directories(chapter_022 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_022 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_022 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_032 chapter_032.cpp)
target_include_directories(chapter_032 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_032 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_032 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_026 chapter_026.cpp)
target_include_directories(chapter_026 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_026 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_026 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_027 chapter_027.cpp)
target_include_directories(chapter_027 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_027 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_027 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_033 chapter_033.cpp)
target_include_directories(chapter_033 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_033 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_033 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_025 chapter_025.cpp)
target_include_directories(chapter_025 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_025 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_025 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_031 chapter_031.cpp)
target_include_directories(chapter_031 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_031 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_031 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_019 chapter_019.cpp)
target_include_directories(chapter_019 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_019 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_019 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_018 chapter_018.cpp)
target_include_directories(chapter_018 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_018 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_018 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_030 chapter_030.cpp)
target_include_directories(chapter_030 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_030 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_030 PRIVATE ${CV_LIBRARIES})

add_executable(chapter_024 chapter_024.cpp)
target_include_directories(chapter_024 PRIVATE ${CV_INCLUDE_DIRS})
target_link_directories(chapter_024 PRIVATE ${CV_LIBRARY_DIRS})
target_link_libraries(chapter_024 PRIVATE ${CV_LIBRARIES})

